fixed background color issue for plusButton on Safari

--- a/src/App.css
+++ b/src/App.css
@@ -59,6 +59,7 @@
   margin: 0 auto;
   padding: 5px;
   font-size: x-large;
+  background-color: transparent;
 }
 
 .Minus-button {
